adding about me

--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
 <!DOCTYPE html>
 <html lang="id">
   <head>
-    <meta charset="UTF-8" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ahmad Fashich | Portofolio</title>
-    <link rel="stylesheet" href="/public/css/home/index.css" >
-    <link rel="preconnect" href="https://fonts.googleapis.com" >
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
+    <link rel="stylesheet" href="/public/css/home/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap"
       rel="stylesheet"
-    >
+    />
   </head>
   <body>
     <section class="hero">
-      <video autoplay preserveaspectratio="none" muted loop class="background-video">
+      <video
+        autoplay
+        preserveaspectratio="none"
+        muted
+        loop
+        class="background-video"
+      >
         <source
           src="/public/videos/home/background-video-banner.mp4"
           type="video/mp4"
-        >
+        />
         Browser Anda tidak mendukung video.
       </video>
       <!-- <iframe  preserveAspectRatio="none" 
@@ -30,7 +36,7 @@
 </iframe> -->_
       <div class="overlay"></div>
       <div class="content">
-        <img src="/public/images/home/profile.jpg" alt="Logo" class="logo" >
+        <img src="/public/images/home/profile.png" alt="Logo" class="logo" />
         <h1>Ahmad Fashich Azzuhri Ramadhani</h1>
         <p>Junior Full Stack Developer</p>
       </div>
@@ -40,7 +46,7 @@
 
     <section class="about">
       <h2>About Me</h2>
-      <p class="about-text">
+      <p class="about-text text-1">
         Haloo, aku <b>Ahmad Fashich Azzuhri Ramadhani</b>, yang akrab disapa
         <b>Fashich</b>, aku adalah seorang Junior Full-Stack Developer dengan
         tahap pengembangan dalam merancang, mengembangkan, dan mengoptimalkan
@@ -58,7 +64,18 @@
         <b>Go</b> (untuk high-performance computing dan system programming), dan
         mampu mengadaptasi pendekatan teknis sesuai kebutuhan proyek.
       </p>
-      <p class="about-text">
+
+      <figure class="figure-container-1">
+        <img
+          src="/public/images/home/photo-1.jpg"
+          alt="photo-1"
+          class="figure-photo-1"
+          width="max-width"
+          height="300px"
+        />
+      </figure>
+
+      <p class="about-text text-2">
         Portofolioku ini mencakup pengembangan aplikasi enterprise-grade, sistem
         real-time, arsitektur microservices, dan solusi berbasis cloud dengan
         penerapan best practices seperti <b>clean code</b>,
@@ -75,27 +92,15 @@
         <b>Cisco Packet Tracer</b>, menganalisis jaringan internet mengunakan
         <b>Wireshark</b> dan prototipe IoT dengan <b>Arduino/Raspberry Pi</b>.
       </p>
-      <p class="about-text">
-        Aku juga aktif memanfaatkan cloud platforms seperti <b>AWS</b>,
-        <b>Azure</b>, dan <b>Firebase</b> untuk menyokong skalabilitas dan
-        keandalan aplikasi yang dikembangkannya. Dengan pengalaman dalam
-        berkolaborasi dengan tim cross-functional mulai dari desainer
-        <b>UI/UX</b> hingga <b>DevOps engineers</b> serta memahami pentingnya
-        komunikasi efektif dan agile methodology dalam mencapai tujuan proyek.
-        Aku dapat memadukan logika algoritmik yang presisi dengan kreativitas
-        desain untuk menghasilkan produk yang tidak hanya fungsional, tetapi
-        juga intuitif dan berkelanjutan. Komitmennya pada lifelong learning
-        tercermin dari upayanya mempelajari teknologi baru seperti
-        <b>Rust</b> untuk system programming, <b>Kotlin</b> untuk Android
-        development, dan <b>Swift</b> untuk ekosistem Apple, dan juga sambil
-        tetap memperdalam penguasaan framework seperti <b>Next.js</b>,
-        <b>NestJS</b>, dan <b>TensorFlow</b>. Sebagai seorang problem-solver,
-        aku juga percaya bahwa teknologi harus menjadi jembatan untuk memecahkan
-        tantangan nyata dengan etos kerja yang transparan, adaptif, dan
-        berorientasi pada dampak positif baik melalui kontribusi pada proyek
-        open-source, pengembangan solusi bisnis, maupun inisiatif personal yang
-        mendorong inovasi di era digital.
-      </p>
+      <figure class="figure-container-1">
+        <img
+          src="/public/images/home/photo-2.jpg"
+          alt="photo-1"
+          class="figure-photo-2"
+          width="max-width"
+          height="300px"
+        />
+      </figure>
     </section>
 
     <!-- Projects Section -->
