adding my project

--- a/index.html
+++ b/index.html
@@ -107,9 +107,45 @@
     <section class="projects">
       <h2>My Project</h2>
       <div class="project-list">
-        <div class="project">Proyek 1</div>
-        <div class="project">Proyek 2</div>
-        <div class="project">Proyek 3</div>
+        <div class="project">
+          <figure class="project-container-1">
+            <img
+              src="/public/images/home/quiztech.png"
+              alt="quiztech"
+              width="250px"
+              height="250px"
+            />
+            <figcaption class="title-text-project">
+              <br /><br /><span class="title-span">𝒬𝓊𝒾𝓏𝒯𝑒𝒸𝒽</span>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project">
+          <figure class="project-container-1">
+            <img
+              src="/public/images/home/targetshooter.png"
+              alt="targetshooter"
+              width="250px"
+              height="250px"
+            />
+            <figcaption class="title-text-project">
+              <br /><br /><span class="title-span">TargetShooter</span>
+            </figcaption>
+          </figure>
+        </div>
+        <div class="project">
+          <figure class="project-container-1">
+            <img
+              src="/public/images/home/echogame-tetris.png"
+              alt="echogame-tetris"
+              width="250px"
+              height="250px"
+            />
+            <figcaption class="title-text-project">
+              <br /><br /><span class="title-span">EchoGame Tetris</span>
+            </figcaption>
+          </figure>
+        </div>
       </div>
     </section>
 
