adding my project

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   frameborder="0" 
   allow="autoplay; encrypted-media; loop"
   allowfullscreen>
-</iframe> -->_
+</iframe> -->
       <div class="overlay"></div>
       <div class="content">
         <img src="/public/images/home/profile.png" alt="Logo" class="logo" />
@@ -92,7 +92,7 @@
         <b>Cisco Packet Tracer</b>, menganalisis jaringan internet mengunakan
         <b>Wireshark</b> dan prototipe IoT dengan <b>Arduino/Raspberry Pi</b>.
       </p>
-      <figure class="figure-container-1">
+      <figure class="figure-container-2">
         <img
           src="/public/images/home/photo-2.jpg"
           alt="photo-1"
@@ -134,7 +134,7 @@
           </figure>
         </div>
         <div class="project">
-          <figure class="project-container-1">
+          <figure class="project-container-2">
             <img
               src="/public/images/home/echogame-tetris.png"
               alt="echogame-tetris"
