adding my project

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="project">
           <figure class="project-container-1">
             <img
-              src="/public/images/home/quiztech.png"
+              src="./public/images/home/quiztech.png"
               alt="quiztech"
               width="250px"
               height="250px"
