adding my project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         class="background-video"
       >
         <source
-          src="/public/videos/home/background-video-banner.mp4"
+          src="./public/videos/home/background-video-banner.mp4"
           type="video/mp4"
         />
         Browser Anda tidak mendukung video.
@@ -36,7 +36,7 @@
 </iframe> -->
       <div class="overlay"></div>
       <div class="content">
-        <img src="/public/images/home/profile.png" alt="Logo" class="logo" />
+        <img src="./public/images/home/profile.png" alt="Logo" class="logo" />
         <h1>Ahmad Fashich Azzuhri Ramadhani</h1>
         <p>Junior Full Stack Developer</p>
       </div>
@@ -67,7 +67,7 @@
 
       <figure class="figure-container-1">
         <img
-          src="/public/images/home/photo-1.jpg"
+          src="./public/images/home/photo-1.jpg"
           alt="photo-1"
           class="figure-photo-1"
           width="max-width"
@@ -94,7 +94,7 @@
       </p>
       <figure class="figure-container-2">
         <img
-          src="/public/images/home/photo-2.jpg"
+          src="./public/images/home/photo-2.jpg"
           alt="photo-1"
           class="figure-photo-2"
           width="max-width"
@@ -136,7 +136,7 @@
         <div class="project">
           <figure class="project-container-2">
             <img
-              src="/public/images/home/echogame-tetris.png"
+              src="./public/images/home/echogame-tetris.png"
               alt="echogame-tetris"
               width="250px"
               height="250px"
