adding my project

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="project">
           <figure class="project-container-1">
             <img
-              src="/public/images/home/targetshooter.png"
+              src="./public/images/home/targetshooter.png"
               alt="targetshooter"
               width="250px"
               height="250px"
@@ -171,6 +171,6 @@
     <footer>
       <p>&copy; 2025 Ahmad Fashich Azzuhri Ramadhani</p>
     </footer>
-    <script src="/public/javascripts/home/index.js"></script>
+    <script src="./public/javascripts/home/index.js"></script>
   </body>
 </html>
