--- a/index.html
+++ b/index.html
@@ -119,6 +119,27 @@
               <br /><br /><span class="title-span">𝒬𝓊𝒾𝓏𝒯𝑒𝒸𝒽</span>
             </figcaption>
           </figure>
+          <div class="project-container">
+            <figure class="tech-stack">
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/htmlcss.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="100px"
+                height="100px"
+              />
+            </figure>
+            <h6 class="text-texh-stack">Tech Stack:</h6>
+            <link>
+            <a href="https://fashich.github.io/QuizTech/" abbr="Click to Direct the Website" class="link-website">View Website -></a>
+            <link>
+            <a href="https://github.com/Fashich/QuizTech" class="github-button">
+              <img src="./public/images/home/github.png" alt="Github" draggable="false" width="25px" height="25px" class="github-image">
+              <h6 class="text-github">Github -></h6>
+            </a>
+          </div>
         </div>
         <div class="project">
           <figure class="project-container-1">
@@ -132,6 +153,36 @@
               <br /><br /><span class="title-span">TargetShooter</span>
             </figcaption>
           </figure>
+          <div class="project-container">
+            <figure class="tech-stack">
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/htmlcss.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="100px"
+                height="100px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/js.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack-2"
+                width="35px"
+                height="35px"
+           1   />
+            </figure>
+            <h6 class="text-texh-stack">Tech Stack:</h6>
+            <link>
+            <a href="https://fashich.github.io/QuizTech/" abbr="Click to Direct the Website" class="link-website">View Website -></a>
+            <link>
+            <a href="https://github.com/Fashich/targetshooter" class="github-button">
+              <img src="./public/images/home/github.png" alt="Github" draggable="false" width="25px" height="25px" class="github-image">
+              <h6 class="text-github">Github -></h6>
+            </a>
+          </div>
         </div>
         <div class="project">
           <figure class="project-container-2">
@@ -145,6 +196,83 @@
               <br /><br /><span class="title-span">EchoGame Tetris</span>
             </figcaption>
           </figure>
+          <div class="project-container">
+            <figure class="tech-stack">
+              <div class="group-stack">
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/next.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="25px"
+                height="25px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/react.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/ts.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/tw.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/toast.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/vite.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+              />
+              <img
+                abbr="HTML5 and CSS"
+                src="./public/images/home/webpack.png"
+                alt="html5"
+                draggable="false"
+                class="image-tech-stack"
+                width="35px"
+                height="35px"
+           1   />
+           </div>
+            </figure>
+            <h6 class="tech-text">Tech Stack:</h6>
+            <link>
+            <a href="https://fashich.github.io/QuizTech/" abbr="Click to Direct the Website" class="link-website-3 link-web">View Website -></a>
+            <link>
+            <a href="https://github.com/Fashich/EchoGame-Tetris" class="github-button-3">
+              <img src="./public/images/home/github.png" alt="Github" draggable="false" width="25px" height="25px" class="github-image-3">
+              <h6 class="text-github">Github -></h6>
+            </a>
+          </div>
         </div>
       </div>
     </section>
